--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
      #column{
             width:100%;
             background:#ffffff;
-            border:1px solid #000000;
             position:relative;
      }
      .date{
@@ -132,9 +131,8 @@
          margin-left:5%;
      }
     #menu{
-        width:33%;
-        max-width:640px;
-        padding:1% 0.5%;
+
+        padding:1% 0;
         position:fixed;
         bottom:0;
 
@@ -152,7 +150,7 @@
         border-radius:.3em;
         background-color:#f66f6f;
         color:#fff;
-        padding:1.5% 5%;
+        padding:0.5% 5%;
         margin-left:5%;
     }
     #right{
@@ -161,9 +159,10 @@
         border-radius:.5em;
         background-color:#fbb435;
         color:#fff;
-        padding:1.5% 5%;
+        padding:0.5% 5%;
         margin-right: 5%;
     }
+    /*min-320-s*/
     @media  screen and (min-device-width: 320px) {
         * {
             font-size: 0.75em;
@@ -211,6 +210,85 @@
             margin-right: 5%;
         }
     }
+        /*min-320-e*/
+        /*min-768-s*/
+        @media  screen and (min-device-width: 768px){
+            * {
+                font-size: 1em;
+
+            }
+            #content h2{font-size:2.4em;}
+            #menu{
+                width:82.5%;
+                padding:2% 0.5%;
+                position:fixed;
+                bottom:0;
+
+                background: #29bde0;
+                filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr=#4dff0000, endColorstr=#4dff0000);
+            }
+            :root #menu {
+                filter: none;
+                background-color: #29bde0;
+                background-color: rgba(41, 189, 240, 0.6);
+            }
+            #left{
+                font-size:2.5em;
+                float:left;
+                border-radius:.3em;
+                background-color:#f66f6f;
+                color:#fff;
+                padding:1.5% 5%;
+                margin-left:5%;
+            }
+            #right{
+                font-size:2.5em;
+                float:right;
+                border-radius:.5em;
+                background-color:#fbb435;
+                color:#fff;
+                padding:1.5% 5%;
+                margin-right: 5%;
+            }
+            @media  screen and (min-device-width: 1280px){
+                * {
+                    font-size: 1em;
+
+                }
+                #content h2{font-size:2.4em;}
+                #menu{
+                    width:49.7%;
+                    padding:2% 0.5%;
+                    position:fixed;
+                    bottom:0;
+
+                    background: #29bde0;
+                    filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr=#4dff0000, endColorstr=#4dff0000);
+                }
+                :root #menu {
+                    filter: none;
+                    background-color: #29bde0;
+                    background-color: rgba(41, 189, 240, 0.6);
+                }
+                #left{
+                    font-size:1.5em;
+                    float:left;
+                    border-radius:.3em;
+                    background-color:#f66f6f;
+                    color:#fff;
+                    padding:1.5% 5%;
+                    margin-left:5%;
+                }
+                #right{
+                    font-size:1.5em;
+                    float:right;
+                    border-radius:.5em;
+                    background-color:#fbb435;
+                    color:#fff;
+                    padding:1.5% 5%;
+                    margin-right: 5%;
+                }
+        }
 
     </style>
 </head>
