--- a/index.html
+++ b/index.html
@@ -288,6 +288,44 @@
                     padding:1.5% 5%;
                     margin-right: 5%;
                 }
+                @media  screen and (min-device-width: 1600px){
+                    * {
+                        font-size: 1em;
+
+                    }
+                    #content h2{font-size:2.4em;}
+                    #menu{
+                        width:39%;
+                        padding:1% 0.5%;
+                        position:fixed;
+                        bottom:0;
+
+                        background: #29bde0;
+                        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr=#4dff0000, endColorstr=#4dff0000);
+                    }
+                    :root #menu {
+                        filter: none;
+                        background-color: #29bde0;
+                        background-color: rgba(41, 189, 240, 0.6);
+                    }
+                    #left{
+                        font-size:1.5em;
+                        float:left;
+                        border-radius:.3em;
+                        background-color:#f66f6f;
+                        color:#fff;
+                        padding:1.5% 5%;
+                        margin-left:5%;
+                    }
+                    #right{
+                        font-size:1.5em;
+                        float:right;
+                        border-radius:.5em;
+                        background-color:#fbb435;
+                        color:#fff;
+                        padding:1.5% 5%;
+                        margin-right: 5%;
+                    }
         }
 
     </style>
