--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             background-color: rgba(41, 189, 240, 0.6);
      }
      #left{
-            width:20%;
+            width:25%;
+            padding:1% 5%;
             font-size:1.5em;
             border-radius:.3em;
             background-color:#f66f6f;
@@ -162,7 +163,8 @@
             text-align: center;
      }
      #right{
-            width:25%;
+            width:30%;
+            padding:1% 5%;
             font-size:1.5em;
             float:right;
             border-radius:.5em;
@@ -172,11 +174,13 @@
             position:relative;
             right:5%;
             top:2.5%;
+            text-align:center;
      }
+
   /*min-320-s*/
     @media  screen and (min-device-width: 320px) {
         * {
-            font-size: 0.75em;
+            font-size: 0.8em;
 
         }
         #content h2{font-size:2.5em;}
@@ -189,14 +193,14 @@
     }
         /*min-320-e*/
         /*min-768-s*/
-        @media  screen and (min-device-width: 768px){
+       @media  screen and (min-device-width: 438px){
             * {
-                font-size: 1em;
+                font-size: 0.9em;
 
             }
             #content h2{font-size:2.4em;}
 
-        @media  screen and (min-device-width: 1280px){
+        @media  screen and (min-device-width: 640px){
              * {
                  font-size: 1em;
 
